--- a/configs/ssd_mobilenet_v1_coco.config
+++ b/configs/ssd_mobilenet_v1_coco.config
@@ -6,7 +6,7 @@
 
 model {
   ssd {
-    num_classes: 90
+    num_classes: 2
     box_coder {
       faster_rcnn_box_coder {
         y_scale: 10.0
@@ -42,8 +42,8 @@ model {
     }
     image_resizer {
       fixed_shape_resizer {
-        height: 300
-        width: 300
+        height: 600
+        width: 600
       }
     }
     box_predictor {
@@ -181,7 +181,7 @@ eval_config: {
   num_examples: 8000
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
-  max_evals: 10
+  # max_evals: 10
 }
 
 eval_input_reader: {
