--- a/configs/ssd_mobilenet_v2_coco.config
+++ b/configs/ssd_mobilenet_v2_coco.config
@@ -181,9 +181,9 @@ eval_config: {
   num_examples: 8000
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
-  max_evals: 20
+  max_evals: 10
   max_num_boxes_to_visualize: 60
-  min_score_threshold: 0.2
+  # min_score_threshold: 0.2
 }
 
 eval_input_reader: {
