--- a/configs/ssd_mobilenet_v2_coco.config
+++ b/configs/ssd_mobilenet_v2_coco.config
@@ -164,10 +164,6 @@ train_config: {
     random_horizontal_flip {
     }
   }
-  data_augmentation_options {
-    resize_image {
-    }
-  }
 }
 
 train_input_reader: {
@@ -183,7 +179,7 @@ eval_config: {
   # Remove the below line to evaluate indefinitely.
   max_evals: 10
   max_num_boxes_to_visualize: 60
-  # min_score_threshold: 0.2
+  min_score_threshold: 0.2
 }
 
 eval_input_reader: {
