--- a/configs/ssd_mobilenet_v2_coco.config
+++ b/configs/ssd_mobilenet_v2_coco.config
@@ -164,6 +164,12 @@ train_config: {
     random_horizontal_flip {
     }
   }
+  data_augmentation_options {
+    random_image_scale {
+      min_scale_ratio: 0.8
+      max_scale_ratio: 1.2
+    }
+  }
 }
 
 train_input_reader: {
