--- a/configs/faster_rcnn_inception_v2_pets.config
+++ b/configs/faster_rcnn_inception_v2_pets.config
@@ -9,7 +9,7 @@ model {
     num_classes: 37
     image_resizer {
       keep_aspect_ratio_resizer {
-        min_dimension: 600
+        min_dimension: 640
         max_dimension: 1024
       }
     }
@@ -115,6 +115,12 @@ train_config: {
     random_horizontal_flip {
     }
   }
+  data_augmentation_options {
+    random_image_scale {
+      min_scale_ratio: 0.8
+      max_scale_ratio: 1.2
+    }
+  }
 }
 
 
@@ -128,6 +134,8 @@ train_input_reader: {
 eval_config: {
   metrics_set: "coco_detection_metrics"
   num_examples: 1101
+  max_num_boxes_to_visualize: 100
+  min_score_threshold: 0.4
 }
 
 eval_input_reader: {
