--- a/configs/faster_rcnn_inception_v2_coco.config
+++ b/configs/faster_rcnn_inception_v2_coco.config
@@ -10,7 +10,7 @@ model {
     num_classes: 90
     image_resizer {
       keep_aspect_ratio_resizer {
-        min_dimension: 600
+        min_dimension: 640
         max_dimension: 1024
       }
     }
@@ -115,6 +115,12 @@ train_config: {
     random_horizontal_flip {
     }
   }
+  data_augmentation_options {
+    random_image_scale {
+      min_scale_ratio: 0.8
+      max_scale_ratio: 1.2
+    }
+  }
 }
 
 train_input_reader: {
@@ -129,6 +135,8 @@ eval_config: {
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
   max_evals: 10
+  max_num_boxes_to_visualize: 100
+  min_score_threshold: 0.4
 }
 
 eval_input_reader: {
