--- a/configs/ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14_sync.config
+++ b/configs/ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14_sync.config
@@ -126,8 +126,8 @@ model {
       batch_non_max_suppression {
         score_threshold: 1e-8
         iou_threshold: 0.6
-        max_detections_per_class: 100
-        max_total_detections: 100
+        max_detections_per_class: 140
+        max_total_detections: 140
       }
       score_converter: SIGMOID
     }
@@ -146,13 +146,9 @@ train_config: {
     }
   }
   data_augmentation_options {
-    random_crop_image {
-      min_object_covered: 0.0
-      min_aspect_ratio: 0.75
-      max_aspect_ratio: 3.0
-      min_area: 0.75
-      max_area: 1.0
-      overlap_thresh: 0.0
+    random_image_scale {
+      min_scale_ratio: 0.8
+      max_scale_ratio: 1.2
     }
   }
   optimizer {
@@ -169,7 +165,7 @@ train_config: {
     }
     use_moving_average: false
   }
-  max_number_of_boxes: 100
+  max_number_of_boxes: 140
   unpad_groundtruth_tensors: false
 }
 
@@ -184,6 +180,8 @@ eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
   num_examples: 8000
+  max_num_boxes_to_visualize: 140
+  min_score_threshold: 0.4
 }
 
 eval_input_reader: {
